tests/pass/0079_multiple_functions.ee
fn foo() {
    let x = 1;
    debugPrint(x);
}

fn main() {
    foo();
    foo();
    foo();
}

