tests/fail/0025_inner_scope_variable_not_visible_in_sibling_scope.ee
fn main() {
    {
        let x = 1;
    }
    {
        debugPrint(x);
    }
}
